libs/ui/kis_node_manager.cpp
@@ -623,6 +623,11 @@ void KisNodeManager::slotSomethingActivatedNodeImpl(KisNodeSP node)
 void KisNodeManager::slotNonUiActivatedNode(KisNodeSP node)
 {
     if (node == activeNode()) return;
+
+    // the node must still be in the graph, some asynchronous
+    // signals may easily break this requirement
+    KIS_SAFE_ASSERT_RECOVER_RETURN(node->graphListener());
+
     slotSomethingActivatedNodeImpl(node);
 
     if (node) {
@@ -636,6 +641,10 @@ void KisNodeManager::slotNonUiActivatedNode(KisNodeSP node)
 void KisNodeManager::slotUiActivatedNode(KisNodeSP node)
 {
     if (node == activeNode()) return;
+
+    // the node must still be in the graph, some asynchronous
+    // signals may easily break this requirement
+    KIS_SAFE_ASSERT_RECOVER_RETURN(node->graphListener());
 
     slotSomethingActivatedNodeImpl(node);
 
